--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-opencv-python==4.0.0.21
-opencv-contrib-python==4.0.0.21
+opencv-python
+opencv-contrib-python
 onnx
 tensorflow-addons
 onnxruntime
